--- a/baseframe/static/sass/_bootstrap3-custom.scss
+++ b/baseframe/static/sass/_bootstrap3-custom.scss
@@ -251,12 +251,6 @@ span[class^="icon-"], span[class*=" icon-"]{
     }
 }
 
-// Reposition the caret
-.btn .caret{
-    margin-top: 10px;
-    margin-left: 0;
-}
-
 .dropdown-right{
     left: auto;
     right: 0;
